# coursera-dsa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
algorithmic-toolbox/: CMakeLists.txt
algorithmic-toolbox/templates/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-1/: CMakeLists.txt
algorithmic-toolbox/week-1/hw-1/: CMakeLists.txt  main.cpp
algorithmic-toolbox/week-1/hw-2/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-2/: CMakeLists.txt
algorithmic-toolbox/week-2/coursera-1_fibonacci_number/: CMakeLists.txt  fibonacci.cpp
algorithmic-toolbox/week-2/coursera-2_last_digit_of_fibonacci_number/: CMakeLists.txt  main.cpp  tests.cpp
algorithmic-toolbox/week-2/coursera-3_greatest_common_divisor/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-2/coursera-4_least_common_multiple/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-2/coursera-5_fibonacci_number_again/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-2/coursera-6_last_digit_of_the_sum_of_fibonacci_numbers/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-2/coursera-7_last_digit_of_the_sum_of_fibonacci_numbers_again/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-2/coursera-8_last_digit_of_the_sum_of_squares_of_fibonacci_numbers/: CMakeLists.txt  main.cpp  tests.cpp
algorithmic-toolbox/week-2/extra/: CMakeLists.txt
algorithmic-toolbox/week-2/extra/josephus-problem/: CMakeLists.txt  main.cpp  main.h
algorithmic-toolbox/week-2/extra/range-sum-queries/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-3/: CMakeLists.txt
algorithmic-toolbox/week-3/1-money-change/: CMakeLists.txt  main.cpp  main.h  tests.cpp
algorithmic-toolbox/week-3/2-fractional-knapsack/: CMakeLists.txt  main.cpp  main.h  tests.cpp
