add_subdirectory(coursera-1_fibonacci_number)
add_subdirectory(coursera-2_last_digit_of_fibonacci_number)
add_subdirectory(coursera-3_greatest_common_divisor)
add_subdirectory(coursera-4_least_common_multiple)
add_subdirectory(coursera-5_fibonacci_number_again)
add_subdirectory(coursera-6_last_digit_of_the_sum_of_fibonacci_numbers)
add_subdirectory(coursera-7_last_digit_of_the_sum_of_fibonacci_numbers_again)
add_subdirectory(coursera-8_last_digit_of_the_sum_of_squares_of_fibonacci_numbers)